--- a/client/src/styles/NavBar.css
+++ b/client/src/styles/NavBar.css
@@ -2,7 +2,13 @@
     position: absolute;
     top: 0;
     right: 0;
-    
+
     height: 100%;
     background-color: yellow;
+}
+
+.nav-bar--toogle{
+    position: absolute;
+    top: 20px;
+    right: 20px;
 }
