Added part of navbar

--- a/client/src/styles/TableDisplay.css
+++ b/client/src/styles/TableDisplay.css
@@ -12,6 +12,11 @@
     overflow-x: auto;  /* Hide the horizontal scroll */
 }
 
+.table-display__thead .table-data{
+    text-transform: capitalize;
+    font-weight: bold;
+}
+
 .table-row {
     width: 100%;
 }
