--- a/client/src/styles/NavBar.css
+++ b/client/src/styles/NavBar.css
@@ -2,9 +2,13 @@
     position: absolute;
     top: 0;
     right: 0;
-
+    width: 0;
+    
     height: 100%;
     background-color: yellow;
+
+    overflow-x: hidden;
+    transition: 0.5s;
 }
 
 .nav-bar--toogle{
