--- a/client/src/styles/TableDisplay.css
+++ b/client/src/styles/TableDisplay.css
@@ -12,7 +12,8 @@
     overflow-x: auto;  /* Hide the horizontal scroll */
 }
 
-.table-display__thead .table-data{
+.table-display__thead .table-data {
+    padding: 5px 10px 5px 10px;
     text-transform: capitalize;
     font-weight: bold;
 }
@@ -24,9 +25,24 @@
 .table-data {
     /* changes border color of table */
     border: 1px solid black;
-    
     min-width: 20px;
-    padding: 5px 15px 5px 10px;
-
+    
     background-color: whitesmoke;
+    padding: 0;
+}
+
+.table-data input, .table-data select {
+    width: fit-content;
+    
+    margin: 0;
+    padding: 5px 10px 5px 10px;
+    border: none;
+}
+
+.table-data input:active, .table-data select:active {
+    min-width: fit-content;
+    width: inherit;
+    margin: 0;
+    padding: 5px 10px 5px 10px;
+    border: none;
 }
