--- a/client/src/styles/NavBar.css
+++ b/client/src/styles/NavBar.css
@@ -3,16 +3,24 @@
     top: 0;
     right: 0;
     width: 0;
+
     
     height: 100%;
     background-color: yellow;
 
     overflow-x: hidden;
     transition: 0.5s;
+    
+    display: flex;
+    flex-direction: column;
 }
 
 .nav-bar--open{
     position: absolute;
     top: 20px;
     right: 20px;
+}
+
+.nav-bar * {
+    margin: 5px 30px 0 15px;
 }
