--- a/client/src/styles/TableDisplay.css
+++ b/client/src/styles/TableDisplay.css
@@ -1,4 +1,3 @@
-
 .table-display {
     /* deletes gap between rows and data */
     border-collapse: collapse;
@@ -21,29 +20,37 @@
 
 .table-row {
     width: 100%;
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-column-gap: 0;
+    text-align: center;
+
+}
+
+.table-row:nth-child(even) {
+    background-color: #dddddd;
 }
 
 .table-data {
     /* changes border color of table */
     border: 1px solid black;
     min-width: 20px;
-    
-    background-color: whitesmoke;
     padding: 0;
 }
 
 .table-data input, .table-data select {
-    width: fit-content;
-    
+    width: 100%;
+    margin: 0;
+    padding: 5px 10px 5px 10px;
+    border: none;
+    background-color: transparent;
+}
+
+.table-data input:active, .table-data select:active {
+    min-width: fit-content;
+
     margin: 0;
     padding: 5px 10px 5px 10px;
     border: none;
 }
 
-.table-data input:active, .table-data select:active {
-    min-width: fit-content;
-    width: inherit;
-    margin: 0;
-    padding: 5px 10px 5px 10px;
-    border: none;
-}
