--- a/client/src/styles/NavBar.css
+++ b/client/src/styles/NavBar.css
@@ -14,20 +14,29 @@
     
     display: flex;
     flex-direction: column;
-}
+  }
+
 
 .nav-bar--open{
     position: absolute;
-    top: 25px;
+    top: 20px;
     right: 20px;
-    background-color: white;
-    color: black;
-    border: 2px solid #555555;
-    border-radius: 12px;
+    outline: 0;
+    border: 0;
+    cursor: pointer;
+    background-color: #4299e1;
+    border-radius: 4px;
+    padding: 8px 16px;
+    font-size: 16px;
+    border-bottom: 4px solid #2b6cb0;
+    font-weight: 700;
+    color: white;
+    line-height: 26px;
+
 }
 
 .nav-bar--open:hover {
-    background-color: #555555;
+    background-color: #483a96;
     color: white;
   }
 
