--- a/client/src/styles/SelectWithSearch.css
+++ b/client/src/styles/SelectWithSearch.css
@@ -1,43 +1,48 @@
 .select-with-search {
     position: relative;
     width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
     font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
   }
   
   .select-with-search-header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    height: inherit;
+    margin: 0;
     background-color: transparent;
-    cursor: pointer;
   }
   
   .select-with-search-header:hover {
-    background-color: gray;
+    background-color: lightgray;
   }
   
   .select-with-search-dropdown {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
     position: absolute;
     top: 100%;
     left: 0;
-    width: max-content;
     background-color: white;
     border: 1px solid gray;
-    border-top: none;
-    max-height: 200px;
+    max-height: 250px;
   }
   
   .select-with-search-dropdown input[type="text"] {
-    width: auto;
+    width: inherit;
     margin:0;
     padding: 10px;
-    border: 1px solid black;
+    border: 1px solid gray;
+    border-radius: 0;
   }
   
   .select-with-search-dropdown ul {
     list-style: none;
     margin: 0;
-    padding: 0;
+    padding: 10px 0 10px 0;
     max-height: 100px;
     overflow-y: auto;
   }
@@ -64,14 +69,14 @@
   .select-with-search-add-option {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 10px;
-    border-top: 1px solid gray;
+    padding: 10px 0 10px 0;
   }
   
   .select-with-search-add-option input[type="text"] {
     flex: 1;
     margin-right: 10px;
+    border-radius: 0;
+    width: 70%;
   }
   
   .select-with-search-add-option button {
@@ -80,9 +85,11 @@
     border: none;
     padding: 5px 10px;
     cursor: pointer;
+    height: 40px;
   }
   
   .select-with-search-add-option button:hover {
     background-color: #001f3f;
+    
   }
   
