--- a/client/src/styles/TableDisplay.css
+++ b/client/src/styles/TableDisplay.css
@@ -5,15 +5,14 @@
     display: block;
     width: 100%;
     
-    height: auto;
+    height: 100%;
     margin-bottom: auto;
 
     overflow-y: auto;    /* Trigger vertical scroll    */
     overflow-x: auto;  /* Hide the horizontal scroll */
 }
 
-.table-display__thead .table-data {
-    text-transform: capitalize;
+.table-display__thead .table-data,  .table-display__thead .table-data *{
     font-weight: bold;
 }
 
@@ -32,26 +31,22 @@
 .table-data {
     /* changes border color of table */
     border: 1px solid black;
-    min-width: 20px;
-    padding: 0;
+    min-width: 100px;
 }
 
 
 
 .table-data input, .table-data select {
     width: 100%;
+    height: 100%;
     margin: 0;
-    padding: 5px 10px 5px 10px;
+    padding: 5px;
     border: none;
     background-color: transparent;
 }
 
 .table-data input:active, .table-data select:active {
     min-width: fit-content;
-
-    margin: 0;
-    padding: 5px 10px 5px 10px;
-    border: none;
 }
 
 .buttonUsun-data {
