--- a/client/src/styles/NavBar.css
+++ b/client/src/styles/NavBar.css
@@ -7,7 +7,7 @@
 
     
     height: 100%;
-    background-color: #0534b5;
+    background-color: navy;
 
     overflow-x: hidden;
     transition: 0.5s;
