--- a/client/src/styles/SelectWithSearch.css
+++ b/client/src/styles/SelectWithSearch.css
@@ -20,12 +20,13 @@
   }
   
   .select-with-search-dropdown {
-    display: flex;
+    display: absolute;
     flex-direction: column;
     padding: 10px;
     position: absolute;
     top: 100%;
     left: 0;
+    z-index: 1;
     background-color: white;
     border: 1px solid gray;
     max-height: 250px;
