--- a/client/src/styles/TableDisplay.css
+++ b/client/src/styles/TableDisplay.css
@@ -32,6 +32,7 @@
     /* changes border color of table */
     border: 1px solid black;
     min-width: 100px;
+    padding: 0;
 }
 
 
@@ -40,7 +41,7 @@
     width: 100%;
     height: 100%;
     margin: 0;
-    padding: 5px;
+    padding: 0px;
     border: none;
     background-color: transparent;
 }
